<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eze.fingertipfinance.Finance_Widget_Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/widget_amount"
        android:ems="8"
        android:hint="@string/amount"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:inputType="numberDecimal" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/widget_spinner"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignBottom="@+id/widget_amount"
        android:layout_toEndOf="@+id/widget_amount" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:id="@+id/widget_save"
        android:layout_below="@+id/widget_amount"
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:background="@android:color/holo_green_light"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:id="@+id/widget_cancel"
        android:background="@android:color/holo_red_light"
        android:layout_alignBottom="@+id/widget_save"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

</RelativeLayout>
