<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".Finance_Summary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_buttons">

        <Button
            android:id="@+id/summary_new_income"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/new_income"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_green_light"
            android:layout_alignParentLeft="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/summary_calendar"
            android:src="@drawable/calendar"/>

        <Button
            android:id="@+id/summary_new_bill"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/new_bill"
            android:background="@android:color/holo_red_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_buttons"
        android:background="@android:color/white"
        android:layout_above="@+id/navbar" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/navbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/balance_today"
            android:textStyle="bold"
            android:id="@+id/summary_total"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:id="@+id/summary_total_amount"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</RelativeLayout>
